--- a/index.html
+++ b/index.html
@@ -70,71 +70,15 @@
       font-size: 1rem;
       opacity: 0.8;
       user-select: none;
-      pointer-events: none;
+      pointer-events: all; /* Allow interaction */
+      cursor: pointer; /* Show pointer cursor when hovering */
       animation: fall linear infinite;
-      cursor: grab;
-    }
-
-    .snowflake:active {
-      cursor: grabbing;
+      touch-action: none; /* Prevent default touch actions */
     }
 
     @keyframes fall {
       to {
         transform: translateY(100vh); /* Fall to the bottom of the screen */
-      }
-    }
-
-    /* Mobile Responsiveness */
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 2rem;
-      }
-
-      p {
-        font-size: 1.2rem;
-      }
-
-      button {
-        font-size: 1rem;
-        padding: 8px 16px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      p {
-        font-size: 1rem;
-      }
-
-      button {
-        font-size: 0.9rem;
-        padding: 6px 12px;
-      }
-    }
-
-    /* Sparkle Styles */
-    .sparkle {
-      position: absolute;
-      width: 10px;
-      height: 10px;
-      background-color: gold;
-      border-radius: 50%;
-      box-shadow: 0 0 10px rgba(255, 223, 0, 0.8);
-      animation: sparkle-animation 0.8s ease-out forwards;
-    }
-
-    @keyframes sparkle-animation {
-      0% {
-        opacity: 1;
-        transform: scale(0.5) translateY(0);
-      }
-      100% {
-        opacity: 0;
-        transform: scale(1.5) translateY(-50px);
       }
     }
   </style>
@@ -197,24 +141,6 @@
       }
 
       playMelody(now);
-
-      // Sparkle Effect
-      const startButton = document.getElementById('startButton');
-      const sparkleEffect = (e) => {
-        for (let i = 0; i < 10; i++) {
-          const sparkle = document.createElement('div');
-          sparkle.classList.add('sparkle');
-          document.body.appendChild(sparkle);
-          const x = e.clientX + Math.random() * 30 - 15;
-          const y = e.clientY + Math.random() * 30 - 15;
-          sparkle.style.left = `${x}px`;
-          sparkle.style.top = `${y}px`;
-
-          setTimeout(() => sparkle.remove(), 800); // Remove sparkle after animation
-        }
-      };
-
-      startButton.addEventListener('click', sparkleEffect);
     });
 
     // Holiday Emojis Array (Snowflake, Snowman, Christmas Tree, Hanukkah, Gingerbread)
@@ -228,7 +154,6 @@
 
       const snowflake = document.createElement("div");
       snowflake.classList.add("snowflake");
-      snowflake.setAttribute('draggable', 'true'); // Enable dragging
 
       // Randomly select a holiday emoji
       snowflake.innerText = holidayEmojis[Math.floor(Math.random() * holidayEmojis.length)];
@@ -247,30 +172,50 @@
 
       snowflakeCount++;
 
+      // Allow snowflake to be draggable
+      snowflake.addEventListener("mousedown", startDrag);
+      snowflake.addEventListener("touchstart", startDrag);
+
       // Remove snowflake after animation
       snowflake.addEventListener("animationend", () => {
         snowflake.remove();
         snowflakeCount--;
       });
 
-      // Enable dragging functionality
-      snowflake.addEventListener('dragstart', (e) => {
-        const offsetX = e.clientX - snowflake.getBoundingClientRect().left;
-        const offsetY = e.clientY - snowflake.getBoundingClientRect().top;
+      // Dragging functionality
+      let offsetX, offsetY;
 
-        const onDragMove = (moveEvent) => {
-          snowflake.style.left = `${moveEvent.clientX - offsetX}px`;
-          snowflake.style.top = `${moveEvent.clientY - offsetY}px`;
-        };
+      function startDrag(e) {
+        // Prevent default behavior (e.g., text selection)
+        e.preventDefault();
 
-        const onDragEnd = () => {
-          window.removeEventListener('mousemove', onDragMove);
-          window.removeEventListener('mouseup', onDragEnd);
-        };
+        // Get the mouse/touch position relative to the snowflake
+        const rect = snowflake.getBoundingClientRect();
+        offsetX = e.clientX - rect.left;
+        offsetY = e.clientY - rect.top;
 
-        window.addEventListener('mousemove', onDragMove);
-        window.addEventListener('mouseup', onDragEnd);
-      });
+        // Add event listeners for dragging
+        document.addEventListener("mousemove", drag);
+        document.addEventListener("touchmove", drag);
+        document.addEventListener("mouseup", stopDrag);
+        document.addEventListener("touchend", stopDrag);
+      }
+
+      function drag(e) {
+        // Update snowflake position
+        const x = e.clientX - offsetX;
+        const y = e.clientY - offsetY;
+        snowflake.style.left = `${x}px`;
+        snowflake.style.top = `${y}px`;
+      }
+
+      function stopDrag() {
+        // Remove event listeners once dragging is finished
+        document.removeEventListener("mousemove", drag);
+        document.removeEventListener("touchmove", drag);
+        document.removeEventListener("mouseup", stopDrag);
+        document.removeEventListener("touchend", stopDrag);
+      }
     }
 
     // Continuously generate snowflakes at a slower rate
