--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
  <!-- Background Music -->
  <audio id="background-music" loop autoplay>
-  <source src="https://drive.google.com/uc?export=download&id=16sipjMIkHaKTdhClUIyZ2lN4uzdQVZ46" type="audio/mp3">
+  <source src="https://archive.org/details/linus-and-lucy-mashup" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
 
