--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
 
  <!-- Background Music -->
  <audio id="background-music" loop autoplay>
-  <source src="https://archive.org/details/linus-and-lucy-mashup" type="audio/mp3">
-  Your browser does not support the audio element.
+  <source src="https://soundcloud.com/vinceguaraldi/linus-and-lucy-1" type="audio/mp3"> 
 </audio>
 
   <script>
