--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       overflow: hidden; /* Prevent page scrolling */
     }
 
+    @media (max-width: 768px) {
+  body {
+    background-size: cover; /* Ensures the image still covers the screen */
+    background-position: center center; /* Keeps the image centered */
+  }
+}
+
     h1 {
       font-size: 3rem;
       color: #b22222;
@@ -121,7 +128,8 @@
 
  <!-- Background Music -->
  <audio id="background-music" loop autoplay>
-  <source src="https://soundcloud.com/vinceguaraldi/linus-and-lucy-1" type="audio/mp3"> 
+  <source src="https://drive.google.com/uc?export=download&id=16sipjMIkHaKTdhClUIyZ2lN4uzdQVZ46" type="audio/mp3">
+  Your browser does not support the audio element.
 </audio>
 
   <script>
