--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
     @media (max-width: 768px) {
   body {
-    background-size: 100% 100%;
+    background-size: 150% auto;
     background-size: cover; /* Ensures the image still covers the screen */
-    background-position: center top; /* Keeps the image centered */
+    background-position: center center; /* Keeps the image centered */
   }
 }
 
