--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       background-size: cover;
       background-position: top center;
       background-repeat: repeat;
+      background-attachment: fixed;
       color: #8b0000;
       text-align: center;
       margin: 0;
@@ -22,8 +23,7 @@
     }
 
     @media (max-width: 768px) {
-  body {
-    background-size: 150% auto;
+  body { 
     background-size: cover; /* Ensures the image still covers the screen */
     background-position: center center; /* Keeps the image centered */
   }
